--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -127,7 +127,7 @@ a:hover{text-decoration: none;}
 .locationSearch span {
     background: #cbb03b;
     position: absolute;
-    left: 0;
+    left: 0;text-align: center;
     width: 55px;
     height: 54px;
     line-height: 54px;
@@ -274,6 +274,216 @@ body textarea.form-control { height: 100px !important; resize: none; padding-top
 .modal-title {text-transform: uppercase;}
 .agent img, .customer img { max-width: 140px;}
 
+/******* Agent Page Css Start Here *********/
+.location_search {
+    background: #fdde59;
+    position: relative;
+    z-index: 9;
+    box-shadow: 0 2px 4px #AFAFB0;
+}
+.location_search span.filterSearch.dropdown-toggle {cursor: pointer;background:#f2ce32;height: 70px;float: right;font-size: 18px;line-height: 70px;    padding: 0 25px;}
+.location_search .locationSearch { max-width: 380px; float: left; min-width: 320px;    margin: 0;}
+.location_search .yellow_btn {
+    max-width: 200px;
+    text-align: center;
+    height: 42px;
+    line-height: 42px;
+    box-shadow: none;
+    border: 1px solid #c4ce0e;
+    margin-left: -1px;
+    position: relative;
+    z-index: 9;
+}
+.location_search input.form-control {
+    height: 42px;
+    box-shadow: 0 0 8px #cbb03b inset;
+}
+.location_search span {line-height: 42px; height: 42px;font-size: 18px;}
+.location_btn { padding: 14px 0;}
+
+.agent_Map { position: relative;
+    padding: 0 15px;
+}
+.Agent_list {
+    padding: 20px 0 0;
+    max-height: 600px;
+    overflow: hidden;
+    overflow-y: auto;
+}
+
+.Agent_list h3 span {
+    font-style: normal;
+    display: block;
+    font-size: 17px;
+    font-weight: 500;
+    text-transform: uppercase;
+    margin: 5px 0 0;
+}
+.padding_0{padding: 0 !important;}
+.padding_right_0{padding-right: 0 !important;}
+.agent_img{width: 90px;
+    height: 90px;
+    overflow: hidden;
+border-radius: 50%;}
+.agent_img img {
+    width: 100%;
+    height: 100%;
+}
+.list_box {
+    padding: 15px;
+    border: 1px solid #d9d9d9;
+    margin-bottom: 15px;
+}
+.agent_cont p{margin: 0;}
+.agent_review {
+    padding: 15px 0;
+    text-align: center;
+}
+.map_cont {
+    position: absolute;
+    z-index: 9;
+    width: 100%;
+    background: #fdde59;
+    bottom: 0;
+    height: 124px;
+    padding: 0 30px;
+}
+.agent_icon_panel img {
+    float: left;
+    margin-top: -50px; margin-right:15px;
+}
+.agent_icon_panel h4 {
+    margin-top: 28px;
+    display: inline-block;
+    font-weight: 600;
+    font-size: 28px;
+}
+.agent_icon_panel p{ font-size: 18px;}
+.map_cont h6 {
+    font-size: 19px;
+    font-weight: 600;
+    margin-top: 28px;
+}
+.km {
+    font-size: 19px;
+    font-weight: 600;
+    margin: 5px 0 0;
+}
+.map_cont .progress {
+    border: 1px solid #000;
+    border-radius: 0;height: 6px;
+    background: #000;
+    overflow: visible;
+}
+.map_cont .progress-bar {
+    background: #ffffff;position:relative;
+}
+.progress-bar::before {
+    content: '';
+    width: 25px;
+    height: 20px;
+    background: #ff0000;
+    right: 0;
+    position: absolute;
+    z-index: 9;
+    border-radius: 5px;
+}
+.dropdown-menu{padding: 0;}
+.Agent_list h3 {
+    font-style: italic;
+    font-weight: 600;
+    font-size: 29px;
+}
+
+.slidecontainer {
+  width: 100%; /* Width of the outside container */
+}
+
+/* The slider itself */
+.slider {
+  -webkit-appearance: none;  /* Override default CSS styles */
+  appearance: none;
+  width: 100%; /* Full-width */
+  height: 6px; /* Specified height */
+  background: #000; /* Grey background */
+  outline: none; /* Remove outline */
+  opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
+  -webkit-transition: .2s; /* 0.2 seconds transition on hover */
+  transition: opacity .2s;
+}
+
+/* Mouse-over effects */
+.slider:hover {
+  opacity: 1; /* Fully shown on mouse-over */
+}
+
+/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none; /* Override default look */
+  appearance: none;
+  width: 25px; /* Set a specific slider handle width */
+  height: 25px; /* Slider handle height */
+  background: #ff0000; /* Green background */
+  cursor: pointer; /* Cursor on hover */border-radius:4px;
+    position: relative;
+}
+
+.slider::-webkit-slider-thumb::before{content:''; position: absolute:100%; height:6px; right:0;left:0; z-index: 9; background: #fff;}
+.slider::-moz-range-thumb {
+  width: 25px; /* Set a specific slider handle width */
+  height: 25px; /* Slider handle height */
+  background: #ff0000; /* Green background */
+  cursor: pointer; /* Cursor on hover */border-radius:4px;
+}
+
+/****************** contact page ***********************/
+.contact_panel {
+    background: #f2f3f8;
+    padding: 50px 0;
+}
+.contact_box {
+    border: 1px solid #c9c9c9; margin-bottom: 15px;
+}
+.contact_box h3 {
+    background: #ffd948;
+    margin: 0;
+    font-size: 16px;
+    text-transform: uppercase;
+    padding: 11px;
+    font-weight: 600;
+}
+.contact_form {
+    padding: 35px;
+    background: #fff;
+}
+.address_box:first-child {
+    border-bottom: 1px solid #e9e9e9;
+    margin-bottom: 15px;
+}
+.address_box h4 {
+    font-size: 19px;
+    font-weight: 600;
+    margin: 15px 0;
+}
+.address_box p {
+    color: #717171;
+    font-size: 16px; line-height: 24px;
+}
+.form-control {
+    box-shadow: 0 0 7px #ccc inset;
+}
+.contact_box .yellow_btn {
+    border: 1px solid #c0c90c;
+    box-shadow: none;
+    height: 40px;
+    line-height: 40px;
+    max-width: 130px;
+}
+.contact_form .form-control::placeholder {
+    color: #8e8e8e;
+    font-size: 14px;
+}
+
 @media(max-width:640px)
 {
 .banner_cont {padding:20px 0;}    
@@ -288,4 +498,10 @@ body textarea.form-control { height: 100px !important; resize: none; padding-top
 .primary ul li { width: 100%;}
 .primary ul li a { display: block;}
 .top_menu em{display: none;}
+.map_cont {position: static;height: auto;}
+.list_box{ text-align: center;}   
+.agent_img {display: inline-block;}    
+.location_btn {text-align: center;}   
+.location_search .locationSearch {float: none;max-width:100%;width:100%;margin: 0 0 15px;display: inline-block;}
+.location_search span.filterSearch.dropdown-toggle {float: none; display: block; margin-bottom: 15px;}
 }
