--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -22,12 +22,13 @@ a:hover{text-decoration: none;}
 }
 .menu_left {
     float: left;
-    width:65%; margin-right:3%;
+    width: 65%;
+    margin-right: 1%;
     text-align: right;
 }
 .menu_right {
     float: left;
-    width:32%;
+    width: 34%;
     text-align: right;
 }
 .top_menu {
@@ -61,16 +62,18 @@ a:hover{text-decoration: none;}
     border-left: 0;
 }
 .menu_right a {
-    font-size: 20px;
+    font-size: 14px;
     color: #54580c;
     background: #e5f015;
-    width: 100%;
-    display: block;
+    width: auto;
+    display: inline-block;
     border-radius: 4px;
     border: 1px solid #ccc;
     text-align: center;
-    height: 61px;
-    line-height: 61px;
+    height: 47px;
+    padding: 0 12px;
+    line-height: 47px;
+    margin-top: 14px;
 }
 .menu_right a:hover{background: #ffdb3f;}
 .main_menu ul {
@@ -85,10 +88,10 @@ a:hover{text-decoration: none;}
     background-size: 100%;
     float: left;
     width: 100%;
-    padding:106px 0;
+    padding:60px 0;
 }
 .banner_cont {
-    padding: 100px 0;
+    padding: 80px 0;
 }
 .banner_cont h1 {
     font-size: 65px;
@@ -263,16 +266,40 @@ button.navbar-toggler i.fa.fa-bars { line-height: 35px;}
 .modal-body input.yellow_btn {height: 48px; line-height: 51px; border: 1px solid #ccc; display: block; width: 100%; max-width: 100%;    margin:10px 0 0; box-shadow: 0 0 8px #d4de18 inset;}
 body textarea.form-control { height: 100px !important; resize: none; padding-top: 10px !important;}
 .yellow_btn:focus {outline: none; border: none;}
-.how_work_listing li{display: block;}
-.how_work_listing li a img {float: left;}
-.how_work_listing li a{background: #72727a; float: left; padding: 10px 20px; color: #fff; font-size: 24px; text-align: center;line-height: 57px; margin: 5px 0; width: 100%;}
-.how_work_listing li a:hover{background:#ffdb3f;}
+.how_work_listing {
+    max-width:650px;
+    margin: 20px auto;
+}
+.how_work_listing ul li{list-style-type: none;}
+.how_work_listing ul li span {
+    width: 40px;
+    height: 40px;
+    border: 2px solid #ccc;
+    border-radius: 50%;
+    display: inline-block;
+    text-align: center;
+    font-size: 17px;
+    line-height: 40px;margin-right: 15px;
+}
+.how_work_listing li a {
+    float: left;
+    padding: 15px 0;
+    color: #ffdb3f;
+    font-size: 24px;
+    width: 100%;
+    border-bottom: 1px solid #ddd;
+}
 .agent, .customer {text-align: center;margin-top: 40px;}
-.agent h4, .customer h4{ font-size: 26px;font-weight: 600;}
+.agent h4, .customer h4 {
+    font-size: 26px;
+    font-weight: 600;
+    display: inline-block;
+    margin: 0 50px;
+}
 .how_works {float: left; width: 100%;padding: 50px 0 0;}
 .modal-body .form-control::placeholder {color: #ccc;}
 .modal-title {text-transform: uppercase;}
-.agent img, .customer img { max-width: 140px;}
+.agent img, .customer img { max-width: 100px;}
 
 /******* Agent Page Css Start Here *********/
 .location_search {
