--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -532,3 +532,50 @@ border-radius: 50%;}
 .location_search .locationSearch {float: none;max-width:100%;width:100%;margin: 0 0 15px;display: inline-block;}
 .location_search span.filterSearch.dropdown-toggle {float: none; display: block; margin-bottom: 15px;}
 }
+.custom-file-input {
+    position: relative;
+    z-index: 2;
+    width: 100%;
+    height: calc(1.5em + 0.75rem + 2px);
+    margin: 0;
+    opacity: 0;
+}
+.custom-file-label {
+    box-shadow: 0 0 7px #ccc inset;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1;
+    height: calc(1.5em + 0.75rem + 2px);
+    padding: 0.375rem 0.75rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #6e707e;
+    background-color: #fff;
+    border: 1px solid #d1d3e2;
+    border-radius: 0.35rem;
+}
+.custom-file-label::after {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 3;
+    display: block;
+    height: calc(1.5em + 0.75rem);
+    padding: 0.375rem 0.75rem;
+    line-height: 1.5;
+    color: #6e707e;
+    content: "Browse";
+    background-color: #eaecf4;
+    border-left: inherit;
+    border-radius: 0 0.35rem 0.35rem 0;
+}
+.custom-file{
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    height: calc(1.5em + 0.75rem + 2px);
+    margin-bottom: 0;
+}
