--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -308,7 +308,8 @@ body textarea.form-control { height: 100px !important; resize: none; padding-top
     z-index: 9;
     box-shadow: 0 2px 4px #AFAFB0;
 }
-.location_search span.filterSearch.dropdown-toggle {cursor: pointer;background:#f2ce32;height: 70px;float: right;font-size: 18px;line-height: 70px;    padding: 0 25px;}
+.location_search li {list-style: none;}
+.location_search a.filterSearch.dropdown-toggle {cursor: pointer;background:#f2ce32;height: 70px;float: right;font-size: 18px;line-height: 70px;    padding: 0 25px;}
 .location_search .locationSearch { max-width: 380px; float: left; min-width: 320px;    margin: 0;}
 .location_search .yellow_btn {
     max-width: 200px;
@@ -614,4 +615,36 @@ border-radius: 50%;}
     text-transform: none;
     max-width: 80px;
     margin-left: 8px;
+}
+
+
+.dropdown-submenu {
+  position: relative;
+}
+
+.dropdown-submenu a::after {
+  transform: rotate(-90deg);
+  position: absolute;
+  right: 6px;
+  top: .8em;
+}
+
+.dropdown-submenu .dropdown-menu {
+  top: -3px;
+  left: -124.5%;
+  margin-left: .1rem;
+  margin-right: .1rem;
+}
+.filter-wrap a{
+    color: #000;
+}
+.agent_types li:hover{
+    background: #f8f9fa;
+}
+.agent_types li{
+    cursor: pointer;
+    padding:.25rem 1.5rem;
+}
+.agent_types li a{
+    width:100%;
 }
