--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -770,3 +770,14 @@ nav.navigation2 .page-item:first-child a.page-link:hover, nav.navigation2 .page-
     max-width: 80px;
     margin-left: 8px;
 }
+.action_icons{
+    color: #dca500 !important;
+}
+.view_agent_details .form-control{
+    border: none;
+    border-radius: none: 
+    box-shadow: none;
+    padding: 0;
+    border-bottom: solid 1px #ccc;
+    box-shadow:none;
+}
