--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -803,18 +803,11 @@ nav.navigation2 .page-item:first-child a.page-link:hover, nav.navigation2 .page-
 }
 .agent_types li a{
     width:100%;
-=======
+}
 .action_icons{
     color: #dca500 !important;
 }
-.view_agent_details .form-control{
-    border: none;
-    border-radius: none: 
-    box-shadow: none;
-    padding: 0;
-    border-bottom: solid 1px #ccc;
-    box-shadow:none;
-}
+
 .button {
     box-shadow: none;
     height: 40px;
@@ -837,12 +830,30 @@ nav.navigation2 .page-item:first-child a.page-link:hover, nav.navigation2 .page-
     background: #fdde59;
 }
 
-.danger_btn{
-    background: #dc3545;
+.pending-details{
+    padding:0 15px 30px 15px;
+}
+
+.pending-details .button {
+    font-size: 14px;
+    width: auto;
+    display: inline-block;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    text-align: center;
+    height: 47px;
+    padding: 0 25px;
+    line-height: 47px;
+    margin-top: 14px;
+    max-width: 250px;
+}
+.pending-details .danger_btn{
+    background: #d60e21;
+     padding: 0 30px;
     border: 1px solid #9e4c54;
     color: #fff;
 }
-.danger_btn:hover {
+.pending-details .danger_btn:hover {
     text-decoration: none;
-    background: #ec5462;
+    background: #ed4242;
 }
