agent verification done

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -824,10 +824,20 @@ nav.navigation2 .page-item:first-child a.page-link:hover, nav.navigation2 .page-
 .success_btn{
     background: #e5f015;
     border: 1px solid #c0c90c;
+    color: #000;
 }
 .success_btn:hover {
     text-decoration: none;
     background: #fdde59;
+}
+.danger_btn{
+    background: #d60e21;
+    border: 1px solid #9e4c54;
+    color: #fff;
+}
+.danger_btn:hover {
+    text-decoration: none;
+    background: #ed4242;
 }
 
 .pending-details{
