--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3,6 +3,11 @@
  * Copyright 2013-2019 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-full-width-pics/blob/master/LICENSE)
  */
+
+ 
+ /*backup color #ffdb3f*/
+
+
 *{margin: 0; padding: 0;}
 @font-face {
     font-family: 'SignikaRegular';
