--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -845,6 +845,9 @@ nav.navigation2 .page-item:first-child a.page-link:hover, nav.navigation2 .page-
     text-decoration: none;
     background: #fdde59;
 }
+a.success_btn{
+    color: #000;
+}
 .danger_btn{
     background: #d60e21;
     border: 1px solid #9e4c54;
