--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -281,7 +281,7 @@ button.navbar-toggler i.fa.fa-bars { line-height: 35px;}
 .top_menu em{font-style: normal;}
 .modal-header { background: #ffd948;}
 .modal-body label { color: #505050; font-size: 16px;}
-.modal-body .form-control { border: none;    height: 48px;border-radius: 0;    padding: 0 15px;    box-shadow: 0 0 7px #ccc inset;}
+.modal-body .form-control { border: none; border-radius: 0;    padding: 0 15px;    box-shadow: 0 0 7px #ccc inset;}
 .modal-body input.yellow_btn {height: 48px; line-height: 51px; border: 1px solid #ccc; display: block; width: 100%; max-width: 100%;    margin:10px 0 0; box-shadow: 0 0 8px #d4de18 inset;}
 body textarea.form-control { height: 100px !important; resize: none; padding-top: 10px !important;}
 .yellow_btn:focus {outline: none; border: none;}
@@ -1016,7 +1016,7 @@ h5{
     transition: .4s;
 }
 
-.slider:before {
+.availability-section .slider:before {
   position: absolute;
   content: "";
   height: 13px;
