--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -20,7 +20,8 @@
 }
 body{font-family: 'SignikaRegular';font-size: 14px;}
 a:hover{text-decoration: none;}
-
+.text-link{color: #ffc107; font-style: italic; text-decoration: underline;}
+.text-link:hover{color: #fdda42;}
 .main_menu {
     float: right; text-transform: uppercase;
     width: 100%;
@@ -800,6 +801,11 @@ nav.navigation2 .page-item:first-child a.page-link:hover, nav.navigation2 .page-
     max-width: 80px;
     margin-left: 8px;
 }
+
+.footer_login a.register_btn{
+    line-height: 30px;
+}
+
 .dropdown-submenu {
   position: relative;
 }
