--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -42,8 +42,11 @@ a:hover{text-decoration: none;}
     margin: 0 0 9px;
 }
 .top_menu ul li{display: inline-block;}
-.top_menu ul li a {color:#000; display: block;
+.top_menu ul li a {
+    color:#000; 
+    display: block;
     padding: 2px 18px;
+    cursor: pointer;
 }
 .primary ul {
     float: right;
@@ -1169,7 +1172,7 @@ ul.details-list li span {
   color: white;
 }
 .mission-requests{
-    width: 200px;
+    width: 208px;
     margin: 0px;
     padding: 0px;
     margin-top: 10px;
@@ -1181,7 +1184,7 @@ ul.details-list li span {
     border: none;
     padding: 12px;
     font-size: 13px;
-    line-height:0px;
+    line-height:17px;
     height: auto;
     text-align: left;
     text-transform: none;
@@ -1254,7 +1257,7 @@ span.form-control i{
 .agent_review span {
     font-size: 12px;
 }
-.form-group span{
+.mission_hours_note{
     font-size: 11px;
     color: #ff5200;
 }
