--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1252,10 +1252,37 @@ span.form-control i{
     font-size: 12px;
 }
 .mission_hours_note{
-    font-size: 11px;
+    font-size: 14px;
     color: #ff5200;
 }
 .orange_bg{
     background: #ffc107 !important;
     border: solid 1px #ffc107;
+}
+.card_section h5{
+    font-size: 29px;
+}
+.card_section p{
+    font-size: 17px;
+}
+.note-div{
+    font-size: 14px;
+}
+.legend_icons{
+    padding-top: 24px;
+}
+.legend_icons img {
+    height: 26px;
+    width: 18px;
+}
+.legend_icons span{
+    font-weight: 600;
+    font-size: 17px;
+}
+.back_btn{
+    color: #ffc107;
+    padding: 5px 20px;
+}
+.back_btn:hover{
+    color: #FFEB3B;
 }
