fix: text issue on agent page

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1332,7 +1332,7 @@ span.form-control i{
     margin: 60px 0px; 
 }
 .text_panel p{
-    color:#8b8b8b;
+    color:#000000;
     font-size: 18px;
 }
 .text_panel a,
