fix: design issue, default vehicle required and extra payment calculation for mission less than 4 hours

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1184,6 +1184,7 @@ ul.details-list li span {
 }
 span.form-control{
     height: auto;
+    word-break: break-all;
 }
 span.form-control i{
     font-size: 13px;
