--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1363,3 +1363,12 @@ span.form-control i{
     padding: 0px 5px; 
     font-size: 14px;
 }
+.total_hours{
+    background: #ffc107; 
+}
+.total_hours a, .total_hours i {
+    font-size: 20px !important;
+    color: #ffffff !important;
+    /*padding: 0px !important;*/
+    line-height: 20px;
+}
