--- a/public/blog/wp-content/themes/blog/style.css
+++ b/public/blog/wp-content/themes/blog/style.css
@@ -1336,7 +1336,7 @@ a.more-btn:hover {
   color:#000;
   margin:0 auto;
   line-height:35px;
-  width:10%;
+  width:100px;
   border-radius:30px;
   text-decoration:none;
   border: 3px #e2fc4f solid;
@@ -1354,12 +1354,13 @@ a.more-btn:hover {
   color:#000;
   margin:0 auto;
   line-height:35px;
-  width:15%;
+  width:170px;
   border-radius:30px;
   text-decoration:none;
   border: 3px #ffdb3f solid;
   background: #ffdb3f;
   text-align: center;
+  margin-bottom: 10px;
 }
 
 #seeMoreNo:hover{
