--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1180,6 +1180,11 @@ ul.details-list li span {
     margin-top: -30px;
 }
 
+.dashboard-agents {
+	    margin-left: 50px;
+		margin-top: -55px;
+}
+
 .notification .badge {
   position: absolute;
   top: -4px;
