--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -909,6 +909,28 @@ a.success_btn{
     /*max-width: 250px;*/
 }
 
+.pending-details .cus-button {
+    font-size: 14px;
+    /* width: auto; */
+    /* display: inline-block; */
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    text-align: center;
+    /* height: 47px; */
+    padding: 0px 8px;
+    /* line-height: 47px; */
+    /* margin-top: 14px; */
+	box-shadow: none;
+    height: 40px;
+    line-height: 40px;
+    font-size: 16px;
+    color: #282828;
+    text-transform: uppercase;
+    font-weight: 600;
+    display: inline-block;
+    text-decoration: none;
+}
+
 button.button.bank-transfer_payment.success_btn {
 	width: 15%;
 }
